# Piece

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  Kanban.md  LICENSE  Piece.sln  README.md  vcpkg.json
.github/workflows/: ci.yml
docs/Architecture/: Overview.md
docs/Architecture/EditorVisual/: ClassDiagram.puml  Design.md  SequenceDiagram.puml
docs/Architecture/Layers/HighLevel/: ClassDiagram.puml  Design.md  SequenceDiagram.puml
docs/Architecture/Layers/LowLevel/: ClassDiagram.puml  Design.md  SequenceDiagram.puml
docs/Development/: BuildSystem.md  CiCdStrategy.md  ExampleDrivenDevelopment.md  LoggingStrategy.md  VersioningStrategy.md
docs/doxygen-awesome/templates/: header.html
src/cpp/: CMakeLists.txt
src/cpp/pal/: CMakeLists.txt  iphysics_body.h  iphysics_world.h
src/cpp/pal/box2d/: CMakeLists.txt  box2d_physics_world_factory.cpp  box2d_physics_world_factory.h  pal_box2d_exports.h
src/cpp/pal/box2d_backend/: CMakeLists.txt  box2d_physics_world_factory.cpp  box2d_physics_world_factory.h  pal_box2d_backend_exports.h
src/cpp/piece_core/: CMakeLists.txt  engine_core.cpp  engine_core.h  logging_api.h  native_exports.h  native_interop_types.h  piece_core_exports.h  spdlog_interop_sink.h
src/cpp/piece_core/core/: service_locator.cpp  service_locator.h
src/cpp/piece_core/interfaces/: igraphics_device_factory.h  iphysics_world_factory.h  iwindow_factory.h
src/cpp/piece_intermediate/: CMakeLists.txt  engine_core.cpp  engine_core.h  logging_api.h  native_exports.h  native_interop_types.h  piece_intermediate_exports.h  spdlog_interop_sink.h
src/cpp/piece_intermediate/core/: service_locator.cpp  service_locator.h
src/cpp/piece_intermediate/interfaces/: igraphics_device_factory.h  iphysics_world_factory.h  iwindow_factory.h
src/cpp/ral/: CMakeLists.txt  igraphics_device.h  irender_context.h
src/cpp/ral/interfaces/: iindex_buffer.h  ishader.h  ishader_program.h  ivertex_buffer.h
src/cpp/ral/opengl/: CMakeLists.txt  opengl_exports.cpp  opengl_graphics_device.h  opengl_graphics_device_factory.cpp  opengl_graphics_device_factory.h  opengl_render_context.cpp  opengl_render_context.h  ral_opengl_exports.h
src/cpp/ral/opengl_backend/: CMakeLists.txt  opengl_exports.cpp  opengl_graphics_device.cpp  ral_opengl_backend_exports.h
src/cpp/wal/: CMakeLists.txt  iwindow.h
src/cpp/wal/glfw/: CMakeLists.txt  glfw_exports.cpp  glfw_window.h  glfw_window_factory.h  wal_glfw_exports.h
src/cpp/wal/glfw_backend/: CMakeLists.txt  glfw_exports.cpp  glfw_window.cpp  glfw_window.h  glfw_window_factory.cpp  glfw_window_factory.h  wal_glfw_backend_exports.h
src/csharp/: Directory.Build.props  Piece.sln
src/csharp/Piece.Box2d/: Box2dPInvoke.cs  Box2dServiceCollectionExtensions.cs  Piece.Box2d.csproj
src/csharp/Piece.Core/: Engine.cs  NativeCalls.cs  Piece.Core.csproj  PieceCoreServiceCollectionExtensions.cs
src/csharp/Piece.Core.Abstractions/: Class1.cs  IGraphicsDeviceFactory.cs  LogLevel.cs
src/csharp/Piece.Core.Interop/: Class1.cs  LogLevel.cs  NativeCalls.cs  Piece.Core.Interop.csproj
src/csharp/Piece.Editor/: Piece.Editor.csproj  Program.cs  appsettings.json
src/csharp/Piece.Engine/: Class1.cs
src/csharp/Piece.Framework/: Class1.cs  Piece.Framework.csproj
src/csharp/Piece.Glfw/: GlfwPInvoke.cs  GlfwServiceCollectionExtensions.cs  Piece.Glfw.csproj
src/csharp/Piece.Intermediate.Abstractions/: Class1.cs  IGraphicsDeviceFactory.cs
src/csharp/Piece.OpenGL/: OpenGLPInvoke.cs  OpenGLServiceCollectionExtensions.cs  Piece.OpenGL.csproj
src/csharp/Piece.Tests.CSharp/: UnitTest1.cs
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt
tests/cpp/piece_core/: CMakeLists.txt
tests/cpp/piece_core/core/: CMakeLists.txt  test_engine_core.cpp  test_service_locator.cpp
tests/cpp/piece_intermediate/core/: CMakeLists.txt  test_engine_core.cpp  test_service_locator.cpp
tests/cpp/wal/: CMakeLists.txt
tests/cpp/wal/glfw/: CMakeLists.txt  test_glfw_backend.cpp
tests/cpp/wal/glfw_backend/: CMakeLists.txt  test_glfw_backend.cpp
tests/csharp/Piece.ExampleGame/: Piece.ExampleGame.csproj  Program.cs
tests/csharp/Piece.Tests/: Piece.Tests.csproj  UnitTest1.cs
